package com.directi.training.isp.exercise_refactored;

public interface ProximityListener {
    public void proximityCallback();
}
