package com.directi.training.isp.exercise_refactored;

public interface TimeOutListener {
    public void timeOutCallback();
}
